--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#resume">Resume</a></li>
                     <li><a href="#services">Services</a></li>
-
+                    <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -77,8 +77,18 @@
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Summary</h3>
                     <p class="font-italic">
-                        I am an experienced software engineer.
+                        I am a passionate and skilled software engineer dedicated to crafting innovative solutions in the digital realm. With a solid foundation in programming languages and a keen eye for detail, I bring a wealth of experience in developing robust and efficient software applications.
                     </p>
+                    <p class="font-italic">
+                        My journey in the world of technology has equipped me with expertise in various domains, from front-end development, creating seamless user experiences, to back-end programming, ensuring the functionality and performance of applications. I thrive on tackling complex challenges and am constantly seeking opportunities to expand my knowledge in this ever-evolving field.
+                    </p>
+                    <p class="font-italic">
+                        Driven by a commitment to excellence, I pride myself on delivering high-quality, scalable, and maintainable code. My collaborative mindset enables me to work effectively within interdisciplinary teams, turning ideas into reality through effective communication and problem-solving.
+                    </p>
+                    <p class="font-italic">
+                        Explore my portfolio to discover the projects that showcase my technical prowess and creativity. Whether you're a fellow developer, a potential employer, or someone interested in the digital landscape, I invite you to delve into my work and witness the impact of my dedication to the world of software engineering.
+                    </p>
+
                     <div class="row">
                         <div class="col-lg-6">
                             <ul>
@@ -109,7 +119,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="count-box">
                         <i class="icofont-simple-smile"></i>
-                        <span data-toggle="counter-up">82</span>
+                        <span data-toggle="counter-up">182</span>
                         <p>Happy Clients</p>
                     </div>
                 </div>
@@ -117,7 +127,7 @@
                 <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                     <div class="count-box">
                         <i class="icofont-document-folder"></i>
-                        <span data-toggle="counter-up">99</span>
+                        <span data-toggle="counter-up">132</span>
                         <p>Projects</p>
                     </div>
                 </div>
@@ -125,7 +135,7 @@
                 <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                     <div class="count-box">
                         <i class="icofont-live-support"></i>
-                        <span data-toggle="counter-up">1580</span>
+                        <span data-toggle="counter-up">15800</span>
                         <p>Hours Of Support</p>
                     </div>
                 </div>
@@ -133,7 +143,7 @@
                 <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                     <div class="count-box">
                         <i class="icofont-users-alt-5"></i>
-                        <span data-toggle="counter-up">72</span>
+                        <span data-toggle="counter-up">92</span>
                         <p>Communities</p>
                     </div>
                 </div>
@@ -153,7 +163,7 @@
             <div class="row skills-content">
 
                 <div class="col-lg-6">
-                    <h3>Front-End Development</h3>
+                    <h3>Web Development</h3>
                     <div class="progress">
                         <span class="skill">HTML5<i class="val">100%</i></span>
                         <div class="progress-bar-wrap">
@@ -167,9 +177,15 @@
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">Javascript<i class="val">90%</i></span>
+                        <span class="skill">JavaScript<i class="val">90%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <span class="skill">TypeScript<i class="val">75%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="progress">
@@ -185,25 +201,14 @@
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">React Native <i class="val">87%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
-                    <div class="progress">
                         <span class="skill">BootStrap CSS<i class="val">95%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
 
-
-
-                </div>
-
-                <div class="col-lg-6">
-                    <h2>Back-End</h2>
+                    <br>
+                    <h2>Server-side programming</h2>
                     <div class="progress">
                         <span class="skill">Php  <i class="val">92%</i></span>
                         <div class="progress-bar-wrap">
@@ -220,25 +225,6 @@
                         <span class="skill">Java <i class="val">88%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="progress">
-                        <span class="skill">Mysql<i class="val">90%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
-                    <div class="progress">
-                        <span class="skill">Mongo DB <i class="val">80%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="progress">
-                        <span class="skill">PostgreSQL <i class="val">86%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="progress">
@@ -265,16 +251,86 @@
                             <div class="progress-bar" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
+                </div>
+                <br>
+                <div class="col-lg-6">
+                    <h2>Mobile technologies</h2>
                     <div class="progress">
-                        <span class="skill">Flutter  <i class="val">70%</i></span>
+                        <span class="skill">Flutter  <i class="val">80%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <span class="skill">React Native<i class="val">91%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="91" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <span class="skill">Android<i class="val">85%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <br>
+                    <h2>Databases</h2>
+                    <div class="progress">
+                        <span class="skill">Mysql<i class="val">90%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+
+                    <div class="progress">
+                        <span class="skill">Mongo DB <i class="val">80%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <span class="skill">PostgreSQL <i class="val">86%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+
+                    <div class="progress">
+                        <span class="skill">Firebase - Firestore And Google Cloud <i class="val">100%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <br>
+                    <h2>Artificial Intelligence</h2>
+                    <div class="progress">
+                        <span class="skill">Machine Learning (ML)  <i class="val">70%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">Firebase - Firestore And Google Cloud <i class="val">70%</i></span>
+                        <span class="skill">Natural Language Processing (NLP)<i class="val">70%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <span class="skill">Computer Vision<i class="val">65%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <span class="skill">Reinforcement Learning<i class="val">72%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <span class="skill">Chatbots and Conversational AI<i class="val">80%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
@@ -363,7 +419,7 @@
                     <h3 class="resume-title">Summary</h3>
                     <div class="resume-item pb-0">
                         <h4>Jean Claude HIRWA</h4>
-                        <p><em>Innovative and deadline-driven Web Designer with 4+ years of experience designing and developing software solutions from initial concept to final, polished deliverable.</em></p>
+                        <p><em>Innovative and deadline-driven software engineer with 4+ years of experience designing and developing software solutions from initial concept to final, polished deliverable.</em></p>
                         <p>
                             <ul>
                                 <li>Kigali, Rwanda</li>
@@ -405,6 +461,27 @@
                         <p>I specialize in building databases from the ground up and rejuvenating existing databases by implementing advanced technologies and enhancing their design.</p>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bx bx-mobile"></i></div>
+                        <h4><a href="">Mobile Developemt</a></h4>
+                        <p>I specialize in crafting mobile applications from inception to completion, leveraging cutting-edge technologies to rejuvenate existing apps and enhance their design. My expertise lies in creating seamless and innovative mobile experiences, whether building applications from scratch or revitalizing existing ones through the implementation of advanced mobile development techniques.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bx bx-robot"></i></div>
+                        <h4><a href="">AI Models</a></h4>
+                        <p>I specialize in developing AI models that drive innovation in different applications. From conceptualization to deployment, I leverage advanced technologies to create intelligent and adaptive features. Whether building AI-powered applications from the ground up or enhancing existing ones, I am dedicated to pushing the boundaries of development through the implementation of sophisticated AI models and algorithms.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bx bx-user"></i></div>
+                        <h4><a href="">Consultancy</a></h4>
+                        <p>I specialize in providing strategic consultancy services for companies, offering expertise in optimizing projects from conception to execution. Whether advising on the integration of cutting-edge technologies, guiding teams through the development lifecycle, or revitalizing existing solutions, I bring a wealth of experience to deliver tailored consultancy that ensures success in the ever-evolving landscape of technology.</p>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-sm-12">
@@ -430,7 +507,28 @@
     </section>
     <!-- End Services Section -->
 
+    <!-- ======= projects Section ======= -->
+    <section id="projects" class="contact">
+        <div class="container">
 
+            <div class="section-title">
+                <h2>Projects</h2>
+            </div>
+
+            <div class="row mt-2">
+
+                <div class="col-md-12 d-flex align-items-stretch">
+                    <div class="info-box">
+                        <!-- <i class="bx bx-map"></i> -->
+                        <h3>Coming soon!!!</h3>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+    <!-- End projects Section -->
 
 
     <!-- ======= Contact Section ======= -->
