--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right">
-                    <img src="assets/img/me22.png" class="img-fluid" alt="" style="border-radius:10px;">
+                    <img src="assets/img/me23.jpg" class="img-fluid" alt="" style="border-radius:10px;">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Summary</h3>
@@ -119,7 +119,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="count-box">
                         <i class="icofont-simple-smile"></i>
-                        <span data-toggle="counter-up">182</span>
+                        <span data-toggle="counter-up">17</span>
                         <p>Happy Clients</p>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                 <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                     <div class="count-box">
                         <i class="icofont-document-folder"></i>
-                        <span data-toggle="counter-up">152</span>
+                        <span data-toggle="counter-up">38</span>
                         <p>Projects</p>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                 <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                     <div class="count-box">
                         <i class="icofont-live-support"></i>
-                        <span data-toggle="counter-up">32850</span>
+                        <span data-toggle="counter-up">5475</span>
                         <p>Hours Of Support</p>
                     </div>
                 </div>
@@ -474,7 +474,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                     <div class="icon-box">
-                        <div class="icon"><i class="bx bx-robot"></i></div>
+                        <div class="icon"><i class="bx bx-clipboard"></i></div>
                         <h4><a href="">AI Models</a></h4>
                         <p>I specialize in developing AI models that drive innovation in different applications. From conceptualization to deployment, I leverage advanced technologies to create intelligent and adaptive features. Whether building AI-powered applications from the ground up or enhancing existing ones, I am dedicated to pushing the boundaries of development through the implementation of sophisticated AI models and algorithms.</p>
                     </div>
@@ -511,28 +511,68 @@
     </section>
     <!-- End Services Section -->
 
-    <!-- ======= projects Section ======= -->
-    <section id="projects" class="contact">
+    <!-- ======= Projects Section ======= -->
+    <section id="projects" class="services">
         <div class="container">
 
             <div class="section-title">
                 <h2>Projects</h2>
+                <h4>Here are some of the key projects I have worked on.</h4>
             </div>
 
-            <div class="row mt-2">
+            <div class="row">
 
-                <div class="col-md-12 d-flex align-items-stretch">
-                    <div class="info-box">
-                        <!-- <i class="bx bx-map"></i> -->
-                        <h3>Coming soon!!!</h3>
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bx bx-book-content"></i></div>
+                        <h4><a href="#">STUMIS</a></h4>
+                        <p>Developed at <strong><a href="https://itec.rw" target="_blank">ITEC Ltd</a></strong>, helping institutions manage student records, grading, and attendance effectively.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bx bx-credit-card"></i></div>
+                        <h4><a href="#">ITECPAY</a></h4>
+                        <p>Secure and scalable payment solution built at <strong><a href="https://itec.rw" target="_blank">ITEC Ltd</a></strong>, facilitating transactions for businesses and individuals.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bx bx-restaurant"></i></div>
+                        <h4><a href="#">SMART-SERVE</a></h4>
+                        <p>Comprehensive restaurant operations system developed at <strong><a href="https://itec.rw" target="_blank">ITEC Ltd</a></strong> to streamline ordering, billing, and inventory management.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bx bx-health"></i></div>
+                        <h4><a href="#">Ophthalmology Image Translation</a></h4>
+                        <p>AI-based project at the <strong>University of Rwanda</strong> translating ophthalmology images into medical insights to aid diagnosis.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bx bx-building-house"></i></div>
+                        <h4><a href="#">Hotel Reservation System</a></h4>
+                        <p>Designed an online platform for hotel booking, room management, and customer communications for the hospitality sector.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bx bx-analyse"></i></div>
+                        <h4><a href="#">Business Analytics Dashboard</a></h4>
+                        <p>Developed an interactive dashboard for businesses to visualize sales, customer trends, and operational KPIs using modern data visualization tools.</p>
                     </div>
                 </div>
             </div>
-
-
         </div>
     </section>
-    <!-- End projects Section -->
+    <!-- End Projects Section -->
 
 
     <!-- ======= Contact Section ======= -->
