--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 
-    <title>J.C. Hirwa</title>
+    <title>Jean Claude</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -37,9 +37,8 @@
     <!-- ======= Header ======= -->
     <header id="header" class="header-tops">
         <div class="container">
-
             <h1><a href="#">Jean Claude Hirwa</a></h1>
-            <h2>I'm a passionate <span>Software engineer</span> based in Rwanda.</h2>
+            <h2>I'm | <span id="profession"></span></h2>
 
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
@@ -48,28 +47,28 @@
                     <li><a href="#resume">Resume</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <!-- <li><a href="#contact">Contact</a></li> -->
                 </ul>
             </nav>
             <!-- .nav-menu -->
 
             <div class="social-links">
-                <a href="https://twitter.com/cjhirwa" class="twitter"><i class="icofont-twitter"></i></a>
-                <a href="https://www.instagram.com/cjhirwa" class="instagram"><i class="icofont-instagram"></i></a>
-                <a href="https://wa.me/+250788230853" class="watsapp"><i class="icofont-ui-message"></i></a>
-                <a href="https://www.linkedin.com/in/cjhirwa/" class="linkedin"><i class="icofont-linkedin"></i></a>
+                <a href="https://www.github.com/hicodev-rw/" title="Github" class="github" target="_blank"><i class="icofont-terminal"></i></a>
+                <a href="mailto:cjhirwa@gmail.com" title="Gmail" class="gmail" target="_blank"><i class="icofont-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/cjhirwa/" title="LinkedIn" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></a>
+                <a href="https://www.medium.com/in/cjhirwa/" title="Medium" class="medium" target="_blank"><i class="icofont-newspaper"></i></a>
+                <a href="https://twitter.com/cjhirwa" title="X (Former Twitter)" class="twitter" target="_blank"><i class="icofont-twitter"></i></a>
+                <a href="https://www.instagram.com/cjhirwa" title="Instagram" class="instagram" target="_blank"><i class="icofont-instagram"></i></a>
+                <a href="https://wa.me/+250788230853" title="WhatsApp" class="watsapp" target="_blank"><i class="icofont-whatsapp"></i></a>
+                <a href="tel:+250788230853" title="Call" class="call" target="_blank"><i class="icofont-phone"></i></a>
             </div>
-
         </div>
     </header>
     <!-- End Header -->
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
-
-        <!-- ======= About Me ======= -->
         <div class="about-me container">
-
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right">
                     <img src="assets/img/me23.jpg" class="img-fluid" alt="" style="border-radius:10px;">
@@ -88,28 +87,11 @@
                     <p class="font-italic">
                         Explore my portfolio to discover the projects that showcase my technical prowess and creativity. Whether you're a fellow developer, a potential employer, or someone interested in the digital landscape, I invite you to delve into my work and witness the impact of my dedication to the world of software engineering.
                     </p>
-
-                    <!-- <div class="row">
-                        <div class="col-lg-6">
-                            <ul>
-                                <li><i class="icofont-rounded-right"></i> <strong>Experience:</strong> 4+ years</li>
-                                <li><i class="icofont-rounded-right"></i> <strong>Level:</strong> Fullstack</li>
-                                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +250 788 230 853</li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-6">
-                            <ul>
-                                <li><i class="icofont-rounded-right"></i> <strong>Career:</strong> Software engineer</li>
-                                <li><i class="icofont-rounded-right"></i> <strong>Github:</strong> hicodev-rw</li>
-                                <li><i class="icofont-rounded-right"></i> <strong>E-mail:</strong> hicode250@gmail.com</li>
-                            </ul>
-                        </div>
-                    </div> -->
                 </div>
             </div>
 
         </div>
-        <!-- End About Me -->
+        <!-- End About section -->
 
         <!-- ======= Counts ======= -->
         <div class="counts container">
@@ -385,10 +367,9 @@
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
         <div class="container">
-
+            <a href="./assets/resume/Jean_Claude_Hirwa_Rwanda_Resume_v1.pdf" download class="" title="Download Resume"><i class="icofont-download"></i> Download</a>
             <div class="row">
                 <div class="col-lg-6">
-
                     <h3 class="resume-title">Education</h3>
                     <div class="resume-item">
                         <h4>Master of Science in Engineering Artificial Intelligence (Carnegie Mellon University)</h4>
@@ -420,20 +401,28 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h3 class="resume-title">Summary</h3>
-                    <div class="resume-item pb-0">
-                        <h4>Jean Claude HIRWA</h4>
-                        <p><em>Innovative and deadline-driven software engineer with 5+ years of experience designing and developing software solutions from initial concept to final, polished deliverable.</em></p>
-                        <p>
-                            <ul>
-                                <li>Kigali, Rwanda</li>
-                                <li>+(250) 788 230 853</li>
-                                <li>hicode250@gmail.com</li>
-                            </ul>
-                        </p>
+                    <h3 class="resume-title">PROFESSIONAL EXPERIENCE</h3>
+                    <div class="resume-item">
+                        <h4>Carnegie Mellon University Africa</h4>
+                        <h5>Summer Intern (Jun. 2025 - Aug. 2025) | Business Process Automation, Data Analytics and AI for CMU-Africa's OperationsIntern 2024 - Now</h5>
+                    </div>
+                    <div class="resume-item">
+                        <h4>ITEC Ltd, Rwanda</h4>
+                        <h5>Senior Software Engineer (Dec. 2023 - Sep. 2024)</h5>
+                    </div>
+
+                    <div class="resume-item">
+                        <h4>ITEC Ltd, Rwanda</h4>
+                        <h5>Software Developer (Apr. 2023 - Dec. 2023)</h5>
+                    </div>
+                    <div class="resume-item">
+                        <h4>Software Developer Intern (Jan. 2023 - Apr. 2023)</h4>
+                        <h5>2021 - 2022</h5>
+                    </div>
+                    <div class="col-lg-6">
+
                     </div>
                 </div>
-
             </div>
     </section>
     <!-- End Resume Section -->
@@ -487,26 +476,6 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="title-box text-center">
-
-
-                        <p class="subtitle-a">
-                            <div id="smart-button-container">
-                                <div style="text-align: center;">
-                                    <div style="margin-bottom: 1.25rem;">
-                                        <select style="visibility: hidden" id="quantitySelect"></select>
-                                    </div>
-                                    <div id="paypal-button-container"></div>
-                                </div>
-                            </div>
-
-
-                            <div class="line-mf"></div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
     <!-- End Services Section -->
@@ -524,7 +493,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-cog"></i></div>
-                        <h4><a href="#">SkyNet – Intelligent Business Management</a></h4>
+                        <h4><a href="#">SkyNet - Intelligent Business Management</a></h4>
                         <p>An integrated platform that automates inventory, invoicing, and performance tracking using AI-driven insights to streamline business operations.</p>
                     </div>
                 </div>
@@ -544,14 +513,6 @@
                         <p>A machine learning system to predict stock price trends using time-series analysis and streaming data from financial APIs.</p>
                     </div>
                 </div>
-
-                <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-                    <div class="icon-box">
-                        <div class="icon"><i class="bx bx-map"></i></div>
-                        <h4><a href="#">Geospatial Analytics for Urban Planning</a></h4>
-                        <p>Leveraged GIS data and spatial machine learning techniques to support city planning decisions by identifying infrastructure gaps and growth patterns.</p>
-                    </div>
-                </div> -->
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
                     <div class="icon-box">
@@ -643,7 +604,7 @@
                     <div class="info-box">
                         <i class="bx bx-envelope"></i>
                         <h3>Mail</h3>
-                        <p>hicode250@gmail.com</p>
+                        <p>cjhirwa@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-md-6 mt-4 d-flex align-items-stretch">
@@ -660,9 +621,6 @@
     </section>
     <!-- End Contact Section -->
 
-<!--     <div class="credits"> Download <a href="assets/hicode.apk"> Android app</a> -->
-    </div>
-
     <!-- Vendor JS Files -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -672,35 +630,7 @@
     <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/venobox/venobox.min.js"></script>
-
-    <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-    <!-- <script src="//code.tidio.co/xdyoj9ocgqbo5ae7ddjbmz2e4gmzl2jf.js" async></script> -->
-   <!-- <script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script> -->
-    <!-- <zapier-interfaces-chatbot-embed is-popup='true' chatbot-id='cmbz0i149000hak3uqkr7w2rq' height='600px' width='400px'></zapier-interfaces-chatbot-embed> -->
-
+    <script src="assets/js/magic.js"></script>
 </body>
-
 </html>
-
-</div>
-</div>
-</div>
-
-
-</div>
-</section>
-<!-- End Contact Section -->
-
-<!-- <div class="credits"> Download <a href="assets/hicode.apk"> Android app</a> -->
-</div>
-
-<!-- Vendor Files -->
-<script src="assets/vendor/jquery/jquery.min.js"></script>
-<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-<script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-<script src="assets/vendor/counterup/counterup.min.js"></script>
-<script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-<script src="assets/vendor/venobox/v
