--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li><a href="#pub">Publications</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <!-- <li><a href="#contact">Contact</a></li> -->
                 </ul>
             </nav>
             <!-- .nav-menu -->
